--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,4 +25,39 @@ h2 {
   font-size: 1.8rem;
 }
 
+.container {
+  padding: 0 5% 0 5%;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem 0 1rem 0;
+}
+
+.location {
+  background-color: #eaeaea;
+  color: #353535;
+  padding: 1rem 0 1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+.location::before {
+  content: "";
+  position: fixed;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  z-index: 100;
+}
+.location__name {
+  margin-left: 1.5rem;
+}
+
 /*# sourceMappingURL=style.css.map */
