--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,3 +2,7 @@
 @import "./base/typography";
 
 @import "./utils/variables";
+
+@import "./layout/container";
+@import "./layout/header";
+@import "./layout/hero";
