--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -23,3 +23,42 @@
     margin-left: 1.5rem;
   }
 }
+
+.hero {
+  background-color: #f6f6f6;
+  padding: 3rem 7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  min-height: 25rem;
+
+  &__title {
+    font-size: 2.2rem;
+    font-weight: bold;
+  }
+
+  &__description {
+    margin-top: 1rem;
+    font-size: 1.4rem;
+    color: rgb(151, 151, 151);
+  }
+
+  &__btn {
+    width: fit-content;
+    margin-top: 3rem;
+    border-radius: 5rem;
+    padding: 1.5rem 2rem;
+    background: rgb(255, 121, 218);
+    background: linear-gradient(
+      160deg,
+      rgba(255, 121, 218, 1) 0%,
+      rgba(147, 86, 220, 1) 81%
+    );
+    border: none;
+    color: rgb(255, 249, 221);
+    font-weight: 500;
+    -webkit-box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.37);
+    box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.25);
+  }
+}
