Ajout de la partie fonctionnement

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,8 @@ h1 {
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 2.2rem;
+  font-weight: bold;
 }
 
 .container {
@@ -69,10 +70,6 @@ h2 {
   text-align: center;
   min-height: 25rem;
 }
-.hero__title {
-  font-size: 2.2rem;
-  font-weight: bold;
-}
 .hero__description {
   margin-top: 1rem;
   font-size: 1.4rem;
@@ -90,6 +87,54 @@ h2 {
   font-weight: 500;
   -webkit-box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.37);
   box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.25);
+}
+
+.fonctionnement {
+  margin-top: 3rem;
+}
+
+.step {
+  align-items: center;
+}
+.step__box {
+  margin-top: 3rem;
+  width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: flex-start;
+  background-color: #f6f6f6;
+  border-radius: 2rem;
+  padding: 2.5rem 6rem 2.5rem 2rem;
+  box-shadow: 5px 5px 10px #e5e5e5, -5px -5px 10px #ffffff;
+}
+.step__box--selected {
+  background-color: #f5edff;
+}
+.step__bubble {
+  color: white;
+  position: absolute;
+  padding: 0.5rem;
+  background-color: #9356dc;
+  border-radius: 50%;
+  border: solid 1px #d3d3d3;
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 1rem;
+  text-align: center;
+  vertical-align: middle;
+  left: -1rem;
+  top: 2.1rem;
+}
+.step__icon {
+  color: #7e7e7e;
+  margin-left: 1.5rem;
+}
+.step__icon--selected {
+  color: #9356dc;
+}
+.step__description {
+  font-weight: 600;
+  margin-left: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
