--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,11 @@ h2 {
   font-weight: bold;
 }
 
+h3 {
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
 .container {
   padding: 0 5% 0 5%;
 }
@@ -46,16 +51,6 @@ h2 {
   align-items: center;
   font-size: 1.3rem;
   font-weight: bold;
-}
-.location::before {
-  content: "";
-  position: fixed;
-  top: 60px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  z-index: 100;
 }
 .location__name {
   margin-left: 1.5rem;
@@ -90,7 +85,7 @@ h2 {
 }
 
 .fonctionnement {
-  margin-top: 3rem;
+  margin: 3rem 0rem 5rem 0rem;
 }
 
 .step {
@@ -135,6 +130,54 @@ h2 {
 .step__description {
   font-weight: 600;
   margin-left: 1.5rem;
+}
+
+.restaurant {
+  padding-top: 3rem;
+  width: 100%;
+  background-color: #f6f6f6;
+  margin-bottom: 3rem;
+}
+.restaurant__title {
+  margin-bottom: 1.5rem;
+}
+.restaurant__box {
+  width: 100%;
+  background-color: white;
+  border-radius: 1.5rem;
+  margin-bottom: 2rem;
+  padding-bottom: 1.5rem;
+  box-shadow: 5px 5px 10px #e5e5e5, -5px -5px 10px #ffffff;
+}
+.restaurant__status {
+  position: absolute;
+  bottom: -1rem;
+  right: 2em;
+  padding: 0.5rem 1rem;
+  background-color: aquamarine;
+  color: green;
+  font-size: 1.4rem;
+}
+.restaurant__img {
+  width: 100%;
+  object-fit: cover;
+  height: 17rem;
+  margin-bottom: 1rem;
+  border-radius: 1.5rem 1.5rem 0 0;
+}
+.restaurant__text__box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 2rem 0 1rem;
+}
+.restaurant__icon {
+  font-size: 2.4rem;
+}
+.restaurant__description {
+  font-size: 1.6rem;
+  color: rgb(151, 151, 151);
+  margin-left: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
