--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,13 @@ h3 {
   font-weight: bold;
 }
 
+h4 {
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: "Shrikhand", cursive;
+  color: white;
+}
+
 .container {
   padding: 0 5% 0 5%;
 }
@@ -134,9 +141,9 @@ h3 {
 
 .restaurant {
   padding-top: 3rem;
+  padding-bottom: 5rem;
   width: 100%;
   background-color: #f6f6f6;
-  margin-bottom: 3rem;
 }
 .restaurant__title {
   margin-bottom: 1.5rem;
@@ -158,6 +165,9 @@ h3 {
   color: green;
   font-size: 1.4rem;
 }
+.restaurant__status--bis {
+  bottom: -27rem;
+}
 .restaurant__img {
   width: 100%;
   object-fit: cover;
@@ -178,6 +188,29 @@ h3 {
   font-size: 1.6rem;
   color: rgb(151, 151, 151);
   margin-left: 1rem;
+}
+
+.footer {
+  background-color: #353535;
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+}
+.footer__title {
+  margin-bottom: 1rem;
+}
+.footer__box__container {
+  display: flex;
+  align-items: center;
+}
+.footer__box__container__icon {
+  color: white;
+  margin-right: 1rem;
+  font-size: 1rem;
+}
+.footer__box__container__text, .footer__box__text {
+  color: white;
+  font-size: 1.4rem;
+  margin-bottom: 0.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
