--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,3 +17,10 @@ h3 {
   font-size: 1.8rem;
   font-weight: bold;
 }
+
+h4 {
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: "Shrikhand", cursive;
+  color: white;
+}
