--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,7 @@ h4 {
   align-items: center;
   justify-content: center;
   padding: 1.5rem 0 1rem 0;
+  border-bottom: solid 2px lightgrey;
 }
 
 .location {
