--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,12 @@ h4 {
   color: white;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+  display: inline;
+}
+
 .container {
   padding: 0 5% 0 5%;
 }
@@ -89,7 +95,13 @@ h4 {
   color: rgb(255, 249, 221);
   font-weight: 500;
   -webkit-box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.37);
-  box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.25);
+  box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.37);
+  transition: all 0.3s;
+}
+.hero__btn:hover {
+  background: linear-gradient(160deg, #ff93e1 0%, #a16be0 81%);
+  -webkit-box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.5);
 }
 
 .fonctionnement {
