--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,3 +24,9 @@ h4 {
   font-family: "Shrikhand", cursive;
   color: white;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+  display: inline;
+}
