--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -15,20 +15,20 @@
     margin-bottom: 2rem;
     padding-bottom: 1.5rem;
     box-shadow: 5px 5px 10px #e5e5e5, -5px -5px 10px #ffffff;
+
+    &__link {
+      position: relative;
+    }
   }
 
   &__status {
     position: absolute;
-    bottom: -1rem;
     right: 2em;
+    bottom: 18rem;
     padding: 0.5rem 1rem;
     background-color: aquamarine;
     color: green;
     font-size: 1.4rem;
-
-    &--bis {
-      bottom: -27rem;
-    }
   }
 
   &__img {
