--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,5 +225,54 @@ a {
   font-size: 1.4rem;
   margin-bottom: 0.5rem;
 }
+.loader {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9356dc;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  animation: hide 1s 3s forwards ease-out;
+}
+.loader__spinner {
+  width: 100px;
+  height: 100px;
+  border: 20px solid white;
+  border-radius: 50%;
+  position: absolute;
+}
+.loader__spinner::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background: #ff79da;
+  animation: rotation 3s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg) translate(40px);
+  }
+  100% {
+    transform: rotate(360deg) translate(40px);
+  }
+}
+@keyframes hide {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
