--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -46,8 +46,33 @@
     margin: 0 2rem 0 1rem;
   }
 
+  &__icon__box {
+    position: relative;
+    right: 24px;
+
+    &:hover .restaurant__icon--full {
+      opacity: 1;
+      transition: all 1s;
+    }
+  }
+
   &__icon {
     font-size: 2.4rem;
+    position: absolute;
+    opacity: 1;
+
+    &--full {
+      background: linear-gradient(
+        160deg,
+        lighten(rgba(255, 121, 218, 1), 5%) 0%,
+        lighten(rgba(147, 86, 220, 1), 5%) 81%
+      );
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      opacity: 0;
+    }
   }
 
   &__description {
