--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,6 +348,9 @@ a {
   background-color: white;
   border-radius: 1rem;
   box-shadow: 5px 5px 10px #e5e5e5, -5px -5px 10px #ffffff;
+  opacity: 0;
+  animation: reveal 1.4s forwards;
+  animation-iteration-count: 1;
 }
 .list__plats__cards__title {
   font-size: 1.8rem;
@@ -372,6 +375,51 @@ a {
   align-self: center;
   padding: 1.5rem 5rem;
   margin-bottom: 4rem;
+}
+
+@keyframes reveal {
+  to {
+    opacity: 1;
+  }
+}
+.list__plats__cards:nth-of-type(1n) {
+  animation-delay: 0.1s;
+}
+
+.list__plats__cards:nth-of-type(2n) {
+  animation-delay: 0.2s;
+}
+
+.list__plats__cards:nth-of-type(3n) {
+  animation-delay: 0.3s;
+}
+
+.list__plats__cards:nth-of-type(4n) {
+  animation-delay: 0.4s;
+}
+
+.list__plats__cards:nth-of-type(5n) {
+  animation-delay: 0.5s;
+}
+
+.list__plats__cards:nth-of-type(6n) {
+  animation-delay: 0.6s;
+}
+
+.list__plats__cards:nth-of-type(7n) {
+  animation-delay: 0.7s;
+}
+
+.list__plats__cards:nth-of-type(8n) {
+  animation-delay: 0.8s;
+}
+
+.list__plats__cards:nth-of-type(9n) {
+  animation-delay: 0.9s;
+}
+
+.list__plats__cards:nth-of-type(10n) {
+  animation-delay: 1s;
 }
 
 /*# sourceMappingURL=style.css.map */
