--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,7 @@
   background-color: #353535;
   padding-top: 2rem;
   padding-bottom: 5rem;
+  position: relative;
 
   &__title {
     margin-bottom: 1rem;
