--- a/sass/layout/_restaurant.scss
+++ b/sass/layout/_restaurant.scss
@@ -81,3 +81,35 @@
     margin-left: 1rem;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .step {
+    display: flex;
+    flex-direction: row;
+    margin-top: 2rem;
+
+    &__box {
+      margin-right: 2rem;
+      justify-content: center;
+    }
+    &__bubble {
+      top: -15%;
+      left: 45%;
+    }
+  }
+
+  .restaurant {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    &__title {
+      width: 100%;
+    }
+
+    &__box {
+      width: 40%;
+      margin: 2rem;
+    }
+  }
+}
