--- a/sass/layout/_fonctionnement.scss
+++ b/sass/layout/_fonctionnement.scss
@@ -51,3 +51,20 @@
     margin-left: 1.5rem;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .step {
+    display: flex;
+    flex-direction: row;
+    margin-top: 2rem;
+
+    &__box {
+      margin-right: 2rem;
+      justify-content: center;
+    }
+    &__bubble {
+      top: -15%;
+      left: 45%;
+    }
+  }
+}
