--- a/sass/layout/_loader.scss
+++ b/sass/layout/_loader.scss
@@ -1,12 +1,19 @@
 .loader {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background-color: #9356dc;
   width: 100vw;
   height: 100vh;
   z-index: 100;
+  -webkit-animation: hide 1s 3s forwards ease-out;
   animation: hide 1s 3s forwards ease-out;
 
   &__spinner {
@@ -28,25 +35,52 @@
       bottom: 0;
       margin: auto;
       background: #ff79da;
+      -webkit-animation: rotation 3s linear infinite;
       animation: rotation 3s linear infinite;
     }
   }
 }
 
-@keyframes rotation {
+@-webkit-keyframes rotation {
   0% {
+    -webkit-transform: rotate(0deg) translate(40px);
     transform: rotate(0deg) translate(40px);
   }
   100% {
+    -webkit-transform: rotate(360deg) translate(40px);
     transform: rotate(360deg) translate(40px);
+  }
+}
+
+@keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg) translate(40px);
+    transform: rotate(0deg) translate(40px);
+  }
+  100% {
+    -webkit-transform: rotate(360deg) translate(40px);
+    transform: rotate(360deg) translate(40px);
+  }
+}
+
+@-webkit-keyframes hide {
+  0% {
+    -webkit-transform: translateY(0%);
+    transform: translateY(0%);
+  }
+  100% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
   }
 }
 
 @keyframes hide {
   0% {
+    -webkit-transform: translateY(0%);
     transform: translateY(0%);
   }
   100% {
+    -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
   }
 }
