--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,7 +9,11 @@
   }
 
   &__box__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 
     &__icon {
