--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,8 +2,14 @@
   background-color: #eaeaea;
   color: #353535;
   padding: 1rem 0 1rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   font-size: 1.3rem;
   font-weight: bold;
@@ -16,8 +22,15 @@
 .hero {
   background-color: #f6f6f6;
   padding: 3rem 7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   text-align: center;
   min-height: 25rem;
@@ -29,11 +42,18 @@
   }
 
   &__btn {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     margin-top: 3rem;
     border-radius: 5rem;
     padding: 1.5rem 2rem;
     background: rgb(255, 121, 218);
+    background: -o-linear-gradient(
+      290deg,
+      rgba(255, 121, 218, 1) 0%,
+      rgba(147, 86, 220, 1) 81%
+    );
     background: linear-gradient(
       160deg,
       rgba(255, 121, 218, 1) 0%,
@@ -44,9 +64,16 @@
     font-weight: 500;
     -webkit-box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.37);
     box-shadow: 1px 7px 7px -2px rgba(0, 0, 0, 0.37);
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
     transition: all 0.3s;
 
     &:hover {
+      background: -o-linear-gradient(
+        290deg,
+        lighten(rgba(255, 121, 218, 1), 5%) 0%,
+        lighten(rgba(147, 86, 220, 1), 5%) 81%
+      );
       background: linear-gradient(
         160deg,
         lighten(rgba(255, 121, 218, 1), 5%) 0%,
